cria/estyle header

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,8 @@
-<p>header works!</p>
+<section class="section">
+  <div class="label">Menu</div>
+  <div class="button">
+    <a mat-raised-button href="" target="_blank">Link</a>
+    <a mat-raised-button href="" target="_blank">Link</a>
+    <a mat-raised-button href="" target="_blank">Link</a>
+  </div>
+</section>
