--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
-<section class="section">
-  <div class="label">Menu</div>
-  <div class="button">
+<section class="header">
+  <div class="header-label">Menu</div>
+  <div class="header-button">
     <a mat-raised-button href="" target="_blank">Link</a>
     <a mat-raised-button href="" target="_blank">Link</a>
     <a mat-raised-button href="" target="_blank">Link</a>
