--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,12 +1,15 @@
+$primary-color: #005cbb;
+$secondary-color: #ccc;
+
 .footer {
   position: fixed;
   bottom: 0;
   width: 100%;
   text-align: center;
-  color: #005cbb;
+  color: $primary-color;
   font-size: 16px;
   padding: 0px;
-  border-top: 1px solid #ccc;
+  border-top: 1px solid $secondary-color;
   box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
 }
 
