--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,8 @@
 <section class="header">
   <div class="header-label">Menu</div>
   <div class="header-button">
-    <a mat-raised-button href="/" target="_blank">Home</a>
-    <a mat-raised-button href="" target="_blank">Content</a>
-    <a mat-raised-button href="" target="_blank">Links</a>
+    <a mat-raised-button href="">Home</a>
+    <a mat-raised-button href="content">Content</a>
+    <a mat-raised-button href="">Links</a>
   </div>
 </section>
