--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,9 +1,9 @@
 <footer class="footer">
   <section class="footer-content">
     <div class="footer-links">
-      <a mat-button href="" target="_blank">Link</a>
-      <a mat-button href="" target="_blank">Link</a>
-      <a mat-button href="" target="_blank">Link</a>
+      <a mat-button href="">Link</a>
+      <a mat-button href="">Link</a>
+      <a mat-button href="">Link</a>
     </div>
     <p>Copyright © {{ anoAtual }} - Todos os direitos reservados</p>
   </section>
